@@ -1056,6 +1056,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12302. Fix native compilation on Windows after HADOOP-7824
     (Vinayakumar B via Colin P. McCabe)
 
+    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
+    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
